加入WebSocket處裡類別

--- a/src/SimpleWebSocket/project.json
+++ b/src/SimpleWebSocket/project.json
@@ -1,12 +1,21 @@
-﻿{
-  "version": "1.0.0-*",
-
+{
+  "title": "SimpleWebSocket",
+  "version": "1.0.0",
+  "description": "",
+  "authors": [ "PeiYao Xu" ],
+  "copyright": "MIT",
+  
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "Microsoft.AspNetCore.WebSockets": "1.0.0-preview2-22624"
   },
-
   "frameworks": {
+    "netcoreapp1.0": {
+      "imports": "dnxcore50"
+    },
     "netstandard1.6": {
+      "imports": "dnxcore50"
+    },
+    "netstandard2.0": {
       "imports": "dnxcore50"
     }
   }
