--- a/src/SimpleWebSocket/project.json
+++ b/src/SimpleWebSocket/project.json
@@ -6,6 +6,11 @@
   "copyright": "MIT",
   "projectUrl": "https://github.com/XuPeiYao/SimpleWebSocket/",
   "licenseUrl": "https://github.com/XuPeiYao/SimpleWebSocket/blob/master/license.txt",
+  "scripts": {
+    "postcompile": [
+      "dotnet pack --no-build --configuration %compile:Configuration%"
+    ]
+  },
   "dependencies": {
     "Microsoft.AspNetCore.WebSockets": "1.0.0-preview2-22624"
   },
