--- a/src/SimpleWebSocket/project.json
+++ b/src/SimpleWebSocket/project.json
@@ -1,7 +1,7 @@
 {
   "title": "SimpleWebSocket",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple way make websocket service",
   "authors": [ "PeiYao Xu" ],
   "copyright": "MIT",
   "packOptions": {
