--- a/src/SimpleWebSocket/project.json
+++ b/src/SimpleWebSocket/project.json
@@ -25,7 +25,8 @@
     },
     "netstandard2.0": {
       "imports": "dnxcore50"
-    }
+    },
+    "net46": {}
   },
   "buildOptions": {
     "xmlDoc": true
